testsuite/tests/rep-poly/T17360.stderr

T17360.hs:11:1: error:
    The type of the first pattern in the equation for ‘foo’
    does not have a fixed runtime representation:
      Id a :: TYPE r
